@@ -1,6 +1,5 @@
 *** nearest release ***
   ! effects
-    * add frame
     * add text or picture to image
   ! Sessions: save and restore files list in/from text file
 
